--- a/com_joomlaquiz_expert/admin/backend/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/backend/language/en-GB.com_joomlaquiz.ini
@@ -1006,3 +1006,6 @@ COM_JOOMLAQUIZ_SETTINGS_SHOW_DEV_INFO="Do you want to help our extension?"
 COM_JOOMLAQUIZ_SETTINGS_SHOW_DEV_INFO_DESC="Enable 'Powered by' sign"
 COM_JOOMLAQUIZ_POOL_BREAK_COUNT="Number of questions on 1 page"
 COM_JOOMLAQUIZ_SETTINGS_GLOBAL="Settings"
+
+
+COM_JOOMLAQUIZ_AUTO_SEPARATED="Auto separated"
