// Auto pagebreak .ini fixes

--- a/com_joomlaquiz/admin/backend/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/backend/language/en-GB.com_joomlaquiz.ini
@@ -1002,7 +1002,8 @@ COM_JOOMLAQUIZ_SETTINGS_WYSIWYG_OPTIONS="Edit options with WYSIWYG"
 COM_JOOMLAQUIZ_SETTINGS_WYSIWYG_OPTIONS_DESC="Enable WYSIWYG-editor when editing options in questions?"
 COM_JOOMLAQUIZ_SETTINGS_SHOW_DEV_INFO="Do you want to help our extension?"
 COM_JOOMLAQUIZ_SETTINGS_SHOW_DEV_INFO_DESC="Enable 'Powered by' sign"
-COM_JOOMLAQUIZ_POOL_BREAK_COUNT="Number of questions on 1 page"
 COM_JOOMLAQUIZ_SETTINGS_GLOBAL="Settings"
 
 COM_JOOMLAQUIZ_AUTO_SEPARATED="Auto separated"
+COM_JOOMLAQUIZ_AUTO_BREAK_COUNT="Questions per page"
+COM_JOOMLAQUIZ_AUTO_BREAK_COUNT_DESCR="Number of questions to display on 1 page with 'Auto separated' layout"
