--- a/com_joomlaquiz_expert/site/frontend/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/frontend/language/en-GB.com_joomlaquiz.ini
@@ -243,3 +243,5 @@ COM_JOOMLAQUIZ_QUESTION_IS_CONFIGURED="Question is misconfigured. Please check t
 
 COM_QUIZ_AUP_USER_COMMENT="User finished \"%s\" quiz"
 COM_QUIZ_TIME_OF="of"
+
+COM_JOOMLAQUIZ_EXPERT_DESC="Quiz Deluxe component for Joomla! package has been installed. Including component, modules and plugins."
