Quiz filter fixed

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -240,6 +240,7 @@ COM_JOOMLAQUIZ_IF_THIS="'Separated with Page Breaks' layout will not be applied 
 COM_JOOMLAQUIZ_IF_A_USER_BEGAN="If an authorized user doesn`t finish the started quiz, enabling this option will allow to return to it later and continue from the first not answered question."
 COM_JOOMLAQUIZ_SPECIFY_THE_TIME="Specify the time the user has to pass this quiz (in minutes)"
 COM_JOOMLAQUIZ_TIME_LIMIT2="Time limit (min):"
+COM_JOOMLAQUIZ_TIME_LIMIT3="Time limit (sec):"
 COM_JOOMLAQUIZ_TIMER_STYLE="Timer style:"
 COM_JOOMLAQUIZ_STANDART="Standart"
 COM_JOOMLAQUIZ_REMAINING_TIME="Remaining time"
@@ -263,6 +264,7 @@ COM_JOOMLAQUIZ_THE_NUMBER_OF="This option defines the number of questions on one
 COM_JOOMLAQUIZ_IF_A_USER_BEGAN="If an authorized user doesn`t finish the started quiz, enabling this option will allow to return to it later and continue from the first not answered question."
 COM_JOOMLAQUIZ_CHOOSE_THE_APPROPRIATE="From the drop-down list, select the appropriate option for e-mailing quiz results, or leave it disabled"
 COM_JOOMLAQUIZ_SPECIFY_THE_TIME="Specify the time the user has to pass this quiz (in minutes)"
+COM_JOOMLAQUIZ_SPECIFY_THE_QUESTION_TIME="Specify the time the user has to pass this quiz (in seconds)"
 COM_JOOMLAQUIZ_ENTER_THE_NUMBER="Specify how many times the use can the quiz"
 COM_JOOMLAQUIZ_DEFINE_THE_PERIOD="Define the period (in minutes), in which the user can make the specified number of attempts to take the quiz"
 COM_JOOMLAQUIZ_TICK_THE_CHECKBOX="Select the check box to reset the specified time period every day at midnight"
