// ini, installer, other fixes

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1007,3 +1007,6 @@ COM_JOOMLAQUIZ_SETTINGS_GLOBAL="Settings"
 COM_JOOMLAQUIZ_AUTO_SEPARATED="Auto separated"
 COM_JOOMLAQUIZ_AUTO_BREAK_COUNT="Questions per page"
 COM_JOOMLAQUIZ_AUTO_BREAK_COUNT_DESCR="Number of questions to display on 1 page with 'Auto separated' layout"
+
+JQUIZ_MANAGE="Access Results from FE"
+JQUIZ_MANAGE_COMPONENT_DESC="Access Global Results from FE"
