language constants added

--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -232,6 +232,14 @@ COM_JOOMLAQUIZ_FE_NO_RIGHTS_VIEW_RESULTS="You are not allowed to access the resu
 COM_JOOMLAQUIZ_LP_ACCESS_MSG_FE="You are not allowed to access the learning path."
 COM_JOOMLAQUIZ_CERTIFICATE_MSG_FE="<span style='color:red'>You are not allowed to view the certificate.</span>"
 COM_JOOMLAQUIZ_ANONYMOUS="Anonymous"
+COM_QUIZ_CLICK_TO_START_PUZZLE="Click to start puzzle"
+COM_JOOMLAQUIZ_PENALTY_POINT="Penalty Point:"
+COM_JOOMLAQUIZ_CURRENT_POINT="Current Point:"
+COM_JOOMLAQUIZ_TOTAL_POINT="Total Point:"
+COM_JQ_PUZZLE_CLOSE="Close"
+COM_QUIZ_WELL_DONE="Well Done!"
 COM_JOOMLAQUIZ_CLOSE_END_TAG_PLEASE="<strong style='color:red'>The format is incorrect. The correct format is (#date(d F Y)#)</strong>"
 COM_JOOMLAQUIZ_QUESTION_IS_CONFIGURED="Question is misconfigured. Please check that the number of blanks is equal to the number answer options"
+
+COM_QUIZ_AUP_USER_COMMENT="User finished \"%s\" quiz"
 COM_QUIZ_TIME_OF="of"
