--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1013,3 +1013,5 @@ COM_JOOMLAQUIZ_AUTO_BREAK_COUNT_DESCR="Number of questions to display on 1 page 
 
 JQUIZ_MANAGE="Access Results from FE"
 JQUIZ_MANAGE_COMPONENT_DESC="Access Global Results from FE"
+
+COM_JOOMLAQUIZ_INSERT_QUIZ_TAG_TITLE="Insert JoomlaQuiz"
