--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -245,3 +245,20 @@ COM_QUIZ_AUP_USER_COMMENT="User finished \"%s\" quiz"
 COM_QUIZ_TIME_OF="of"
 
 COM_JOOMLAQUIZ_EXPERT_DESC="Quiz Deluxe component for Joomla! package has been installed. Including component, modules and plugins."
+
+_UE_MYQUIZZES_TEST_CATEGORY="Test category"
+_UE_MYQUIZZES_TEST_SCORE="Test score"
+_UE_MYQUIZZES_PERCENTITLE="Percentitle"
+_UE_MYQUIZZES_RANK="Rank"
+_UE_MYQUIZZES_DURATION="Duration"
+_UE_MYQUIZZES_PLACE="Place"
+_UE_MYQUIZZES_TEST_STATISTICS="Test statistics"
+_UE_MYQUIZZES_NUMBER_OF_TEST="Number of test(s) taken"
+_UE_MYQUIZZES_NUMBER_PROVIDERS="Number of qualified provider(s) who have taken this test"
+_UE_MYQUIZZES_AVERAGE_SCORE="Average score of %s provider(s)"
+_UE_MYQUIZZES_USER_SCORE="%s out of %s (Passing score is %s/%s)"
+_UE_MYQUIZZES_BETTER_THAN="Better than %s%% test provider(s)"
+_UE_MYQUIZZES_RANKED="Ranked %s-th among %s provider(s) who have taken this test"
+_UE_MYQUIZZES_ALLOWED_TIME="Allowed time for this test is %s minutes"
+_UE_MYQUIZZES_NO_QUIZZES="No quizzes finished."
+_UE_JOOMLAQUIZNOTINSTALLED="JoomlaQuiz Deluxe is not installed."
