--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -242,9 +242,9 @@ COM_JOOMLAQUIZ_SPECIFY_THE_TIME="Specify the time the user has to pass this quiz
 COM_JOOMLAQUIZ_TIME_LIMIT2="Time limit (min):"
 COM_JOOMLAQUIZ_TIME_LIMIT3="Time limit (sec):"
 COM_JOOMLAQUIZ_TIMER_STYLE="Timer style:"
-COM_JOOMLAQUIZ_STANDART="Standart"
+COM_JOOMLAQUIZ_STANDART="Standard"
 COM_JOOMLAQUIZ_REMAINING_TIME="Remaining time"
-COM_JOOMLAQUIZ_STANDART_WITH_LIMIT="Standart with limit"
+COM_JOOMLAQUIZ_STANDART_WITH_LIMIT="Standard with limit"
 COM_JOOMLAQUIZ_NUMBER_OF_TIMES="Number of attempts:"
 COM_JOOMLAQUIZ_THE_PERIOD="Period (min):"
 COM_JOOMLAQUIZ_RESET_TIME_LIMIT="Reset time when the next day begins:"
