text cahnges in puzzle

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -497,6 +497,7 @@ COM_JOOMLAQUIZ_GUEST="Allow unauthorized users to take this quiz"
 COM_JOOMLAQUIZ_THE_IMAGE_WIDTH_CANNOT_BE="* The image width cannot be larger than the width of the template area."
 COM_JOOMLAQUIZ_TAFTER_SELECTING_AN_IMAGE="* After selecting an image you MUST click 'Save' button and then go and create the Hotspot."
 COM_JOOMLAQUIZ_PLEASE_NOTE_THAT_INSOME_JOOMLA="* Please, note that in some Joomla modified templates hotspot function works not correctly."
+COM_JOOMLAQUIZ_PUZZLE_OPTIONS_TEXT="Upload the image and /or select is from the drop-down list."
 COM_JOOMLAQUIZ_IMAGE="Image:"
 COM_JOOMLAQUIZ_UPLOAD_NEWIMAGE="Upload new image"
 COM_JOOMLAQUIZ_MOVE_QUESTION="Move Question"
