Fix null copy answers at Drag&Drop and DropDown quizzes.

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1015,3 +1015,4 @@ JQUIZ_MANAGE="Access Results from FE"
 JQUIZ_MANAGE_COMPONENT_DESC="Access Global Results from FE"
 
 COM_JOOMLAQUIZ_INSERT_QUIZ_TAG_TITLE="Insert JoomlaQuiz"
+COM_JOOMLAQUIZ_COPY_ANSWER_TO_QUIZ_ERROR="Answer copy error";
