Real time track & DB fix button

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1016,3 +1016,20 @@ JQUIZ_MANAGE_COMPONENT_DESC="Access Global Results from FE"
 
 COM_JOOMLAQUIZ_INSERT_QUIZ_TAG_TITLE="Insert JoomlaQuiz"
 COM_JOOMLAQUIZ_COPY_ANSWER_TO_QUIZ_ERROR="Answer copy error";
+
+
+COM_JOOMLAQUIZ_CURRENT_QUESTION_REPORT="Current Questions Reports"
+COM_JOOMLAQUIZ_PROGRESS="Progress"
+COM_JOOMLAQUIZ_TOTAL_TIME="	Total time (m)"
+COM_JOOMLAQUIZ_START_ID="#"
+COM_JOOMLAQUIZ_QUIZ_TITLE="Quiz"
+COM_JOOMLAQUIZ_RESPOND_AGO="Last time respond"
+COM_JOOMLAQUIZ_STARTED="Started"
+JHOURS="hours"
+JMINUTES="minutes"
+JSECONDS="seconds"
+COM_JOOMLAQUIZ_REALTIME_TRACK="Real-Time Tracking"
+COM_JOOMLAQUIZ_REALTIME_TRACK_INT="RT Track Interval"
+COM_JOOMLAQUIZ_REALTIME_TRACK_UP="RT Track Frequency"
+
+COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB="Fix Database errors"
