--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.sys.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.sys.ini
@@ -9,6 +9,7 @@ COM_JOOMLAQUIZ_MENU_QUESTIONS="Question Management"
 COM_JOOMLAQUIZ_MENU_CONFIG="Configuration"
 COM_JOOMLAQUIZ_MENU_LANGUAGES="Languages"
 COM_JOOMLAQUIZ_MENU_RESULTS="Results"
+COM_JOOMLAQUIZ_MENU_REALTIME_TRACK="Real-Time Tracking"
 COM_JOOMLAQUIZ_MENU_HELP="Help"
 COM_JOOMLAQUIZ_MENU_ABOUT_JOOMLAQUIZ="About Joomla Quiz"
 
