--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -100,6 +100,7 @@ COM_ACCESS_NO_ATTEMPTS="<font color=red><strong>You have no attempts left to pas
 COM_QUIZ_MINUTES="minute(s)"
 COM_QUIZ_COMEBACK_LATER="<font color='red'><strong>You have just taken this quiz. You can try again in {text}</strong></font>"
 COM_QUIZ_ALREADY_TAKEN="<font color=red><strong>You have already taken this quiz.</strong></font>"
+COM_QUIZ_ALREADY_PASSED="<font color=red><strong>You have already passed this quiz successfully.</strong></font>"
 COM_QUIZ_REG_ONLY="<font color=red><strong>This quiz is for registered users only.</strong></font>"
 COM_LPATH_NOT_AVAILABLE="<font color=red><strong>This course is not available now. Please try again later.</strong></font>"
 COM_QUIZ_PAYMENT_FREE="&nbsp;[Free]"
@@ -166,7 +167,7 @@ COM_QUIZ_PDF_USPENT="The user spent"
 COM_QUIZ_PDF_QTIME="on this quiz"
 COM_QUIZ_PDF_PASQUIZ="has passed the quiz"
 COM_QUIZ_PDF_NPASSQUIZ="has not passed the quiz"
-COM_QUIZ_PDF_ANSWER="Answer:"
+COM_QUIZ_PDF_ANSWER="Your answer:"
 COM_QUIZ_PDF_RIGHT="correct"
 COM_QUIZ_PDF_WRONG="incorrect"
 COM_QUIZ_PDF_PASQUIZ_BOLD="has <strong>passed</strong> the quiz"
