db fixer config + unique code

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1034,3 +1034,5 @@ COM_JOOMLAQUIZ_REALTIME_TRACK_INT="RT Track Interval"
 COM_JOOMLAQUIZ_REALTIME_TRACK_UP="RT Track Frequency"
 
 COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB="Fix Database errors"
+COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB_ENCODING="Fix Database encoding"
+COM_JOOMLAQUIZ_UNIQUE_CODE="Unique shortcode"
