adjuster for unique codes

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1035,3 +1035,4 @@ COM_JOOMLAQUIZ_REALTIME_TRACK_UP="RT Track Frequency"
 COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB="Fix Database errors"
 COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB_ENCODING="Fix Database encoding"
 COM_JOOMLAQUIZ_UNIQUE_CODE="Unique shortcode"
+COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
