--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -261,3 +261,4 @@ _UE_MYQUIZZES_RANKED="Ranked %s-th among %s provider(s) who have taken this test
 _UE_MYQUIZZES_ALLOWED_TIME="Allowed time for this test is %s minutes"
 _UE_MYQUIZZES_NO_QUIZZES="No quizzes finished."
 _UE_JOOMLAQUIZNOTINSTALLED="JoomlaQuiz Deluxe is not installed."
+COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
