--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -207,7 +207,7 @@ COM_JOOMLAQUIZ_QUIZZES_LIST="List of Quizzes"
 COM_JOOMLAQUIZ_FILTER="Filter:"
 COM_JOOMLAQUIZ_TYPE="Type"
 COM_JOOMLAQUIZ_ACTIVE="Active"
-COM_JOOMLAQUIZ_CATEGORY="Category"
+COM_JOOMLAQUIZ_CATEGORY="Category:"
 COM_JOOMLAQUIZ_AUTHOR="Author"
 COM_JOOMLAQUIZ_TOTAL_SCORE="Total Score"
 COM_JOOMLAQUIZ_PASSING_SCORE="Passing Score(%)"
