--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1037,3 +1037,7 @@ COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB="Fix Database errors"
 COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB_ENCODING="Fix Database encoding"
 COM_JOOMLAQUIZ_UNIQUE_CODE="Unique shortcode"
 COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
+
+COM_JOOMLAQUIZ_INSERT_QUIZ_BTN_CANCEL="Cancel"
+COM_JOOMLAQUIZ_INSERT_QUIZ_BTN_INSERT="Insert"
+COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
