--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -563,6 +563,7 @@ COM_JOOMLAQUIZ_TEXT_SHADOW="Text shadow"
 COM_JOOMLAQUIZ_COORDINATE_X="Coordinate x"
 COM_JOOMLAQUIZ_COORDINATE_Y="Coordinate y"
 COM_JOOMLAQUIZ_FONTSIZE="Font-size"
+COM_JOOMLAQUIZ_OFFSET="Offset"
 COM_JOOMLAQUIZ_TEXT_FIELD="Text field"
 COM_JOOMLAQUIZ_SHADOW="Shadow"
 COM_JOOMLAQUIZ_TEXT_X="Text X"
