--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -864,6 +864,8 @@ COM_JOOMLAQUIZ_MOVE_CAT="Move to Categories"
 COM_JOOMLAQUIZ_COPY_TO_QUESTION_TO_CAT="Copy(Move) to Category:"
 COM_JOOMLAQUIZ_THIS_WILLCOPYMOVE_CAT="This will copy(move) the Questions listed	to the selected Category."
 COM_JOOMLAQUIZ_ADMINISTRATION_MOVE_QUESTIONS_CAT="Joomla Quiz Deluxe: Move Question"
+COM_JOOMLAQUIZ_COPY_CAT="Copy to Categories"
+COM_JOOMLAQUIZ_ADMINISTRATION_COPY_QUESTIONS_CAT="Joomla Quiz Deluxe: Copy Question"
 
 COM_JOOMLAQUIZ_NEW="New"
 COM_JOOMLAQUIZ_EDIT="Edit"
