Margin top for quiz setting #47

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1031,6 +1031,7 @@ JSECONDS="seconds"
 COM_JOOMLAQUIZ_REALTIME_TRACK="Real-Time Tracking"
 COM_JOOMLAQUIZ_REALTIME_TRACK_INT="RT Track Interval"
 COM_JOOMLAQUIZ_REALTIME_TRACK_UP="RT Track Frequency"
+COM_JOOMLAQUIZ_CONFIG_MARGIN_TOP="Top margin for quizes (px)"
 
 COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB="Fix Database errors"
 COM_JOOMLAQUIZ_MANAGER_DASHBOARD_FIX_DB_ENCODING="Fix Database encoding"
