--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -485,6 +485,7 @@ COM_JOOMLAQUIZ_DISTRACTORS="Distractors"
 COM_JOOMLAQUIZ_DISTRACTOR="Distractor"
 COM_JOOMLAQUIZ_ADDNEW_DISTRACTOR="Add new distractor"
 COM_JOOMLAQUIZ_ENABLE_QUESTION_FEEDBACK="Enable Question feedback:"
+COM_JOOMLAQUIZ_ENABLE_FEEDBACK_IN_PDF="Enable feedback in PDF:"
 COM_JOOMLAQUIZ_IMMEDIATE_FEEDBACK="Immediate feedback:"
 COM_JOOMLAQUIZ_WHEN_THE_ANSWER="When the answer is correct, display:"
 COM_JOOMLAQUIZ_WHEN_THE_ANSWER_DISPLAY="When the answer is incorrect, display:"
