Add constants for new question popup window

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -703,6 +703,10 @@ COM_JOOMLAQUIZ_FILL_IN_THE_BLANK="Fill In The Blank"
 COM_JOOMLAQUIZ_HOTSPOT="Hotspot"
 COM_JOOMLAQUIZ_SURVEYS="Surveys"
 COM_JOOMLAQUIZ_BOILERPLATE="Boilerplate"
+COM_JOOMLAQUIZ_JIGSAW_PUZZLE="Puzzle"
+COM_JOOMLAQUIZ_MEMORY="Memory"
+COM_JOOMLAQUIZ_IMAGE_MATCH="Image match"
+COM_JOOMLAQUIZ_DALLICLICK="Dalliclick"
 COM_JOOMLAQUIZ_MULTIPLE_QUESTION="Multiple Question"
 COM_JOOMLAQUIZ_PLEASE_SELECT_AN_IMAGE="Please select an image to upload"
 COM_JOOMLAQUIZ_CATEGORY_WITH_THE_SAME="Category with the same title already exist.Please try again."
