--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1040,3 +1040,7 @@ COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
 COM_JOOMLAQUIZ_INSERT_QUIZ_BTN_CANCEL="Cancel"
 COM_JOOMLAQUIZ_INSERT_QUIZ_BTN_INSERT="Insert"
 COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
+
+
+COM_QUIZ_ALEARY_PASSED="You have already passed this quiz."
+COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
