--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -200,12 +200,12 @@ COM_QUIZ_COLLAPSE_ALL="Collapse all"
 COM_QUIZ_LEGEND_QUESTION="Question"
 COM_QUIZ_HIDE_RESULT_PANEL="Hide Results Panel"
 COM_QUIZ_SHOW_RESULT_PANEL="Show Results Panel"
-COM_JOOMLAQUIZ_NO_COUNT_QUESTIONS="Message for admin: Please goto "Quiz settings > Question Pool Options" to specify amount questions from category"
-COM_JOOMLAQUIZ_NOQUESTIONS_IN_POOL="Message for admin: Please goto "Questions Pool" to specify questions for Questions Pool"
-COM_JOOMLAQUIZ_NOQUESTIONS_IN_QUIZ="Message for admin: Please goto "Question Management" to specify questions for quiz"
+COM_JOOMLAQUIZ_NO_COUNT_QUESTIONS="Message for admin: Please go to "Quiz settings > Question Pool Options" to specify amount questions from category"
+COM_JOOMLAQUIZ_NOQUESTIONS_IN_POOL="Message for admin: Please go to "Questions Pool" to specify questions for Questions Pool"
+COM_JOOMLAQUIZ_NOQUESTIONS_IN_QUIZ="Message for admin: Please go to "Question Management" to specify questions for quiz"
 COM_JOOMLAQUIZ_QUIZ_IS_MISCONFIGURED="<font color='red'><strong>Quiz is misconfigured</strong></font>"
 COM_JOOMLAQUIZ_MAX_POINTS="Points - [Max Points]"
-COM_JOOMLAQUIZ_ANSWERED_RESULT="Answed Result"
+COM_JOOMLAQUIZ_ANSWERED_RESULT="Answered Result"
 COM_JOOMLAQUIZ_PDF_GENERATED="PDF Generated"
 COM_QUIZ_TIME_LEFT="Time left to answer this question:"
 COM_QUIZ_ELAPSED_TIME="Elapsed Time: "
