--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -987,6 +987,9 @@ COM_JOOMLAQUIZ_CERTIFICATE_MSG="Certificate accessibility message"
 COM_JOOMLAQUIZ_ACCESS_MSG_FE="You have no acces to this quiz"
 COM_JOOMLAQUIZ_RESULT_MSG_FE="You have no access to view quiz results"
 COM_JOOMLAQUIZ_CERTIFICATE_MSG_FE="You have no access to certificate"
+COM_JOOMLAQUIZ_CERT_ADD_SAMPLE = "Sample certs"
+COM_JOOMLAQUIZ_CERT_ADD_SAMPLE_MESSAGE = "Sample certs were added"
+COM_JOOMLAQUIZ_CERT_ADD_SAMPLE_MESSAGE_ERROR = "Sample certs didn`t add"
 
 COM_JOOMLAQUIZ_LP_BE_JACTION_ACCESS="Learning path access"
 COM_JOOMLAQUIZ_LP_BE_JACTION_VIEW_ACCESS="Learning path access"
