Add image for social sharing

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -971,6 +971,7 @@ COM_JOOMLAQUIZ_YOU_CAN_DEFINE="<strong>You can define the fields for the users t
 COM_JOOMLAQUIZ_HIDE_FEEDBACK="Hide feedback if the user fails the quiz:"
 COM_JOOMLAQUIZ_HIDE_FEEDBACK_DESC="This option will be available if there are several attempts set"
 COM_JOOMLAQUIZ_SHOW_SOCIAL_BUTTONS="Show social share buttons:"
+COM_JOOMLAQUIZ_ADD_IMAGE="Add image for sharing:"
 COM_JOOMLAQUIZ_QUEST_PREVIEW="Preview"
 COM_JOOMLAQUIZ_USEREMAIL="User email"
 
