--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -63,6 +63,7 @@ COM_QUIZ_MES_EMAIL_FAIL="Failed to send e-mail"
 COM_QUIZ_LPATH_NOT_AVAILABLE="<font color=red><strong>This quiz or course is not available now. Please try again later.</strong></font>"
 COM_QUIZ_RES_MES_SCORE_TPL="%s out of %s (%s%%)"
 COM_QUIZ_RES_MES_PAS_SCORE_TPL="%s (%s%%)"
+COM_QUIZ_SOCIAL_SCORE_SHARING_MESSAGE="I had %s out of %s at the "
 COM_QUIZ_USER_PASSES="You have passed the quiz."
 COM_QUIZ_USER_FAILS="You didn't pass the quiz."
 COM_LPATH_NEXT_QUIZ="Next step"
