--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1039,7 +1039,7 @@ COM_JOOMLAQUIZ_TOTAL_TIME="	Total time (m)"
 COM_JOOMLAQUIZ_START_ID="#"
 COM_JOOMLAQUIZ_QUIZ_TITLE="Quiz"
 COM_JOOMLAQUIZ_RESPOND_AGO="Last time respond"
-COM_JOOMLAQUIZ_STARTED="Started"
+COM_JOOMLAQUIZ_STARTED="Started at"
 JHOURS="hours"
 JMINUTES="minutes"
 JSECONDS="seconds"
@@ -1060,3 +1060,4 @@ COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
 
 COM_QUIZ_ALEARY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
+COM_JOOMLAQUIZ_TIME_PASSED="Time used"
