--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -13,6 +13,7 @@ COM_JOOMLAQUIZ_SUBMENU_SETUP_CATEGORY="Quiz Categories"
 COM_JOOMLAQUIZ_SUBMENU_SETUP_QUIZ="Quiz Management"
 COM_JOOMLAQUIZ_SUBMENU_IMPORT_QUIZZES="Import Quizzes"
 COM_JOOMLAQUIZ_SUBMENU_SETUP_LPATH="Learning Paths"
+COM_JOOMLAQUIZ_SUBMENU_CATEGORIES_LPATH="Learning Path Categories"
 COM_JOOMLAQUIZ_MENU_QUESTIONS_MANAGEMENT="Questions"
 COM_JOOMLAQUIZ_SUBMENU_QUESTIONS_CATEGORY="Question Categories"
 COM_JOOMLAQUIZ_SUBMENU_SETUP_QUEST="Question Management"
