--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -173,6 +173,7 @@ COM_QUIZ_PDF_RIGHT="correct"
 COM_QUIZ_PDF_WRONG="incorrect"
 COM_QUIZ_PDF_PASQUIZ_BOLD="has <strong>passed</strong> the quiz"
 COM_QUIZ_PDF_NPASSQUIZ_BOLD="has <strong>failed</strong> the quiz"
+COM_QUIZ_POPUP_EXIT="Questions left unanswered: Click YES to Start submit or click NO to Continue the quiz."
 COM_JQ_REMARK="Remark"
 COM_JQ_SCORE_PENDING="Pending"
 COM_JQ_NOSCRIPT="Javascript is disabled in you browser! Enable it in order for Quiz Deluxe to function correcly."
