Add button EXIT

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -295,6 +295,8 @@ COM_JOOMLAQUIZ_OR_USE="OR redirect depending on the results:"
 COM_JOOMLAQUIZ_NO="No"
 COM_JOOMLAQUIZ_YOU_CAN_USE="To use javascript in redirect URL, write `javascript:` at the beginning of that URL."
 COM_JOOMLAQUIZ_DELAY_BEFORE="Delay before redirection: "
+COM_JOOMLAQUIZ_CREDIT="Credit: "
+COM_JOOMLAQUIZ_CREDIT_WITHOUT_COLON="Credit"
 COM_JOOMLAQUIZ_SECONDS=" seconds"
 COM_JOOMLAQUIZ_QUIZ_GRADING="Quiz grading:"
 COM_JOOMLAQUIZ_QUESTION_FEEDBACK="Question Feedback options"
