--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -139,6 +139,7 @@ COM_LAST_MESSAGE="Attention! There is one non-answered question left."
 COM_QUIZ_CONTINUE="Continue"
 COM_QUIZ_BACK="Back"
 COM_QUIZ_FINISH="FINISH"
+COM_QUIZ_EXIT="EXIT"
 COM_QUIZ_BTN_PANEL="Results panel"
 COM_QUIZ_AUTHOR_PREFIX="Author:"
 COM_STATISTICS_SEL_QUIZ="Select a quiz"
@@ -157,6 +158,7 @@ COM_STATISTICS_OPTIONS="Options"
 COM_STATISTICS_COUNT="Count"
 COM_STATISTICS_CORRECT="Correct"
 COM_STATISTICS_INCORRECT="Incorrect"
+COM_QUIZ_PDF_CREDIT="Quiz credit:"
 COM_QUIZ_PDF_QTITLE="Quiz Title:"
 COM_QUIZ_PDF_UNAME="User Login:"
 COM_QUIZ_PDF_NAME="User Name:"
