Added custom fields to Quiz Description [JCUSTOMDEV-562]

--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -160,6 +160,8 @@ COM_STATISTICS_INCORRECT="Incorrect"
 COM_QUIZ_PDF_QTITLE="Quiz Title:"
 COM_QUIZ_PDF_UNAME="User Login:"
 COM_QUIZ_PDF_NAME="User Name:"
+COM_QUIZ_PDF_UAGE="User Age:"
+COM_QUIZ_PDF_OCUPATION="User Ocupation:"
 COM_QUIZ_PDF_UEMAIL="User E-mail:"
 COM_QUIZ_PDF_USCORE="User Score:"
 COM_QUIZ_PDF_TOTSCORE="Total Score:"
@@ -224,9 +226,13 @@ COM_JOOMLAQUIZ_DEFINE_USERNAME_PLEASE="Define User Name, please!"
 COM_JOOMLAQUIZ_DEFINE_USERSURNAME_PLEASE="Define User Surname, please!"
 COM_JOOMLAQUIZ_DEFINE_EMAIL="Define email, please!"
 COM_JOOMLAQUIZ_DEFINE_VALID_EMAIL="Input correct email please!"
+COM_JOOMLAQUIZ_DEFINE_AGE_PLEASE="Define age, please!"
+COM_JOOMLAQUIZ_DEFINE_OCUPATION_PLEASE="Define ocupation, please!"
 COM_JOOMLAQUIZ_INPUT_USER_NAME="Input user name: "
 COM_JOOMLAQUIZ_INPUT_USER_SURNAME="Input user surname: "
 COM_JOOMLAQUIZ_INPUT_USER_EMAIL="Input user email: "
+COM_JOOMLAQUIZ_INPUT_USER_AGE="Input user age: "
+COM_JOOMLAQUIZ_INPUT_USER_OCUPATION="Input user ocupation: "
 COM_JQ_CERTIFICATE="Certificate"
 COM_JOOMLAQUIZ_DOWNLOAD="Download"
 COM_JOOMLAQUIZ_FE_NO_RIGHTS_VIEW_QUIZ="You are not allowed to access the quiz."
