--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -546,6 +546,8 @@ COM_JOOMLAQUIZ_REMARK="Remark:"
 COM_JOOMLAQUIZ_USERNAME="Username:"
 COM_JOOMLAQUIZ_NAME_NAME="Name:"
 COM_JOOMLAQUIZ_EMAIL="E-mail:"
+COM_JOOMLAQUIZ_AGE="Age:"
+COM_JOOMLAQUIZ_OCUPATION="Ocupation:"
 COM_JOOMLAQUIZ_CERTIFICATES_LIST="Certificates list"
 COM_JOOMLAQUIZ_FILENAME="Filename"
 COM_JOOMLAQUIZ_PREVIEW="Preview"
