--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -978,7 +978,7 @@ COM_JOOMLAQUIZ_HOTSPOT_CONVERTER="Convert Hotspot"
 
 COM_JOOMLAQUIZ_DELETE_FLAGS="Reset Flags"
 COM_JOOMLAQUIZ_FLAG_QUESTIONS="Flag CSV"
-COM_JOOMLAQUIZ_YOU_CAN_DEFINE="<strong>You can define the fields for the users to enter their name and e-mail by inserting tags #name#, #surname#, #email# into the quiz description</strong><br/><br/>"
+COM_JOOMLAQUIZ_YOU_CAN_DEFINE="<strong>You can define the fields for the users to enter their name and e-mail by inserting tags #name#, #surname#, #email#, #age#, #ocupation# into the quiz description</strong><br/><br/>"
 COM_JOOMLAQUIZ_HIDE_FEEDBACK="Hide feedback if the user fails the quiz:"
 COM_JOOMLAQUIZ_HIDE_FEEDBACK_DESC="This option will be available if there are several attempts set"
 COM_JOOMLAQUIZ_SHOW_SOCIAL_BUTTONS="Show social share buttons:"
