--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -530,6 +530,7 @@ COM_JOOMLAQUIZ_QUIZZES_REPORTS="Quizzes reports"
 COM_JOOMLAQUIZ_FILTER="Filter:"
 COM_JOOMLAQUIZ_DATA_TIME="Date Time"
 COM_JOOMLAQUIZ_USER="User"
+COM_JOOMLAQUIZ_USER_CB_ORGANIZATION="Organization"
 COM_JOOMLAQUIZ_USER_SCORE="User score"
 COM_JOOMLAQUIZ_TOTAL_SCORE="Total score"
 COM_JOOMLAQUIZ_PASSING_SCORE="Passing score(%)"
