--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -173,6 +173,8 @@ COM_QUIZ_PDF_RIGHT="correct"
 COM_QUIZ_PDF_WRONG="incorrect"
 COM_QUIZ_PDF_PASQUIZ_BOLD="has <strong>passed</strong> the quiz"
 COM_QUIZ_PDF_NPASSQUIZ_BOLD="has <strong>failed</strong> the quiz"
+COM_QUIZ_PDF_AGE="Age:"
+COM_QUIZ_PDF_OCUPATION="Ocupation:"
 COM_JQ_REMARK="Remark"
 COM_JQ_SCORE_PENDING="Pending"
 COM_JQ_NOSCRIPT="Javascript is disabled in you browser! Enable it in order for Quiz Deluxe to function correcly."
