Language file with the Chinese language

--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -4,18 +4,18 @@
 ; @license GNU/GPL http://www.gnu.org/copyleft/gpl.html
 
 COM_QUIZ_MES_NOTVAIL="Sorry, this option is not available now."
-COM_QUIZ_HEADER_FIN_RESULTS="Quiz Results"
-COM_QUIZ_RES_MES_SCORE="Your score:"
+COM_QUIZ_HEADER_FIN_RESULTS="Quiz Results<br />測驗成績"
+COM_QUIZ_RES_MES_SCORE="Your score/total score(%)<br />得分／總分(%)"
 COM_QUIZ_RES_CAT_SCORE="Score by categories:"
-COM_QUIZ_RES_MES_PAS_SCORE="Passing score:"
-COM_QUIZ_RES_MES_TIME="Elapsed time:"
-COM_QUIZ_HEADER_FIN_MESSAGE="Quiz Message"
+COM_QUIZ_RES_MES_PAS_SCORE="Passing score(%)<br />合格分數(%)"
+COM_QUIZ_RES_MES_TIME="Elapsed time<br />使用時間"
+COM_QUIZ_HEADER_FIN_MESSAGE="Quiz Important Message<br />重要訊息"
 COM_QUIZ_QUIZ_FEEDNACK="Quiz Feedback"
 COM_JQ_PLEASE_SELECT="- Please select -"
 COM_QUIZ_ANSWER="Your answer"
 COM_JQ_POSSIBLE_ANSWERS="Answer choices"
 COM_QUIZ_CORRECT="Correct"
-COM_QUIZ_CREDIT="Credit:"
+COM_QUIZ_CREDIT="CEUs"
 COM_JQ_YOUR_CHOICE="Your choice"
 COM_JQ_PEOPLE_STATISTIC="Users statistics"
 COM_QUIZ_RST_PANSW="This question was answered"
@@ -29,7 +29,7 @@ COM_LPATH_STAGES="Course structure"
 COM_JQ_SHOW_DESCRIPTION="Show description"
 COM_QUIZ_HIDE_DESCRIPTION="Hide description"
 COM_QUIZ_CAREGORY="Category"
-COM_QUIZ_QUIZZES="Quizzes"
+COM_QUIZ_QUIZZES=""
 COM_JQ_PURCH_QUIZZES="Purchased quizzes"
 COM_QUIZ_PURCH_LPATHS="Purchased courses"
 COM_SHOW_PACKAGES_TITLE="Your purchased quizzes and courses"
@@ -44,10 +44,10 @@ COM_PACKAGE_RENEW_DESCR="Contact the administrator to renew your subscription."
 COM_JQ_QUIZZES="Quizzes"
 COM_QUIZ_LPATHS="Courses"
 COM_LPATH_QUIZZES_LIST="Back to list of steps"
-COM_QUIZ_START="Start"
+COM_QUIZ_START="Starts..."
 COM_SHOW_RESULTS_TITLE="Your quizzes results"
 COM_NO_RESULTS="There are no results to display."
-COM_SHOW_RESULTS_DESCR="Click the quiz name to view the detailed results for the attempt."
+COM_SHOW_RESULTS_DESCR="Select the e-quiz title below to view its detailed results and relevant important message."
 COM_JQ_QUIZ="Quiz"
 COM_JQ_DATE_TIME="Date & Time"
 COM_JQ_YOUR_SCORE="Your Score"
@@ -62,14 +62,14 @@ COM_QUIZ_EMAILTO_PROMPT="Please specify the e-mail to send the quiz results to:"
 COM_QUIZ_MES_EMAIL_OK="E-mail was sent successfully"
 COM_QUIZ_MES_EMAIL_FAIL="Failed to send e-mail"
 COM_QUIZ_LPATH_NOT_AVAILABLE="<font color=red><strong>This quiz or course is not available now. Please try again later.</strong></font>"
-COM_QUIZ_RES_MES_SCORE_TPL="%s out of %s (%s%%)"
+COM_QUIZ_RES_MES_SCORE_TPL="%s / %s (%s%%)"
 COM_QUIZ_RES_MES_PAS_SCORE_TPL="%s (%s%%)"
 COM_QUIZ_SOCIAL_SCORE_SHARING_MESSAGE="I had %s out of %s at the "
 COM_QUIZ_USER_PASSES="You have passed the quiz."
 COM_QUIZ_USER_FAILS="You didn't pass the quiz."
 COM_LPATH_NEXT_QUIZ="Next step"
 COM_QUIZ_TRY_AGAIN="Take this quiz again"
-COM_JQ_BACK_TO_RESULTS="Back to results"
+COM_JQ_BACK_TO_RESULTS="Back to results history<br />返回成績清單"
 COM_QUIZ_FIN_BTN_CERTIFICATE="Certificate"
 COM_FIN_BTN_PRINT="PDF Report"
 COM_QUIZ_FIN_BTN_EMAIL="E-mail"
@@ -78,7 +78,7 @@ COM_QUIZ_AN_MAIL_SUBJECT="Quiz is completed"
 COM_QUIZ_RES_MES_SCORE2="User`s score:"
 COM_QUIZ_USER_PASSES2="User passed the quiz."
 COM_QUIZ_USER_FAILS2="User didn't pass the quiz."
-COM_QUIZ_MES_TIMEOUT="Your time has run out"
+COM_QUIZ_MES_TIMEOUT="Your time has run out 測驗時限已到"
 COM_QUIZ_ANSWER_INCORRECT="Your answer is incorrect"
 COM_QUIZ_ANSWER_CORRECT="Your answer is correct"
 COM_QUIZ_PARTIALLY_CORRECT="Partially Correct"
@@ -101,7 +101,7 @@ COM_ACCESS_EXPIRED="<font color=red><strong>Your access has expired.</strong></f
 COM_ACCESS_NO_ATTEMPTS="<font color=red><strong>You have no attempts left to pass this quiz.</strong></font>"
 COM_QUIZ_MINUTES="minute(s)"
 COM_QUIZ_COMEBACK_LATER="<font color='red'><strong>You have just taken this quiz. You can try again in {text}</strong></font>"
-COM_QUIZ_ALREADY_TAKEN="<font color=red><strong>You have already taken this quiz.</strong></font>"
+COM_QUIZ_ALREADY_TAKEN="<font color=red><strong>You have already taken this e-quiz. Re-attempt is not allowed. Please subscribe or take other e-quiz(zes).</strong></font>"
 COM_QUIZ_ALREADY_PASSED="<font color=red><strong>You have already passed this quiz successfully.</strong></font>"
 COM_QUIZ_REG_ONLY="<font color=red><strong>This quiz is for registered users only.</strong></font>"
 COM_LPATH_NOT_AVAILABLE="<font color=red><strong>This course is not available now. Please try again later.</strong></font>"
@@ -129,18 +129,18 @@ COM_QUIZ_STATISTICS_TITLE="%s Statistics"
 COM_MES_COMPLETE_THIS_PART="Please, provide an answer to this quiz question"
 COM_QUIZ_FAILED="FAILED TO LOAD THE QUIZ DATA"
 COM_MES_PLEASE_WAIT="Please wait a few seconds"
-COM_QUIZ_QUESTION_NUMBER="Question {X} of {Y}"
+COM_QUIZ_QUESTION_NUMBER="Question 問題 {X} of／{Y}"
 COM_QUIZ_QUESTION_POINTS="Points for the correct answer {X}"
 COM_QUIZ_FAILED_REQUEST="A problem with the server request occurred"
 COM_QUIZ_UNKNOWN_ERROR="unknown error"
 COM_QUIZ_NEXT="NEXT"
 COM_QUIZ_PREV="PREV"
-COM_QUIZ_SUBMIT="SUBMIT"
+COM_QUIZ_SUBMIT="Submit<br />提交"
 COM_LAST_MESSAGE="Attention! There is one non-answered question left."
 COM_QUIZ_CONTINUE="Continue"
 COM_QUIZ_BACK="Back"
-COM_QUIZ_FINISH="SUBMIT"
-COM_QUIZ_EXIT="PENDING"
+COM_QUIZ_FINISH=" Save & Exit 儲存及離開"
+COM_QUIZ_EXIT="Save & Exit 儲存及離開"
 COM_QUIZ_BTN_PANEL="Results panel"
 COM_QUIZ_AUTHOR_PREFIX="Author:"
 COM_STATISTICS_SEL_QUIZ="Select a quiz"
@@ -176,11 +176,11 @@ COM_QUIZ_PDF_RIGHT="correct"
 COM_QUIZ_PDF_WRONG="incorrect"
 COM_QUIZ_PDF_PASQUIZ_BOLD="has <strong>passed</strong> the quiz"
 COM_QUIZ_PDF_NPASSQUIZ_BOLD="has <strong>failed</strong> the quiz"
-COM_QUIZ_POPUP_EXIT="Questions left unanswered: Click YES to Start submit or click NO to Continue the quiz."
 COM_JQ_REMARK="Remark"
-COM_QUIZ_POPUP_EXIT="Click OK to Start submit or click CANCEL to Continue the quiz."
-COM_QUIZ_POPUP_EXIT_WITHOUT_ANSWERS_PART1="Questions left unanswered: "
-COM_QUIZ_POPUP_EXIT_WITHOUT_ANSWERS_PART2="Click OK to Start submit or click CANCEL to Continue the quiz."
+COM_QUIZ_POPUP_EXIT="Click [OK] to submit or click [Cancel] to return to e-quiz.<br />按［確定］以確認提交或［取消］返回線上測驗。"
+COM_QUIZ_POPUP_EXIT_ATTENTION="Attention!!!"
+COM_QUIZ_POPUP_EXIT_WITHOUT_ANSWERS_PART1="You have question(s) left unanswered:\n你有未作答之問題："
+COM_QUIZ_POPUP_EXIT_WITHOUT_ANSWERS_PART2="Click [OK] to submit or click [Cancel] to return to e-quiz.\n按［確定］以確認提交或［取消］返回線上測驗。"
 COM_JQ_SCORE_PENDING="Pending"
 COM_JQ_NOSCRIPT="Javascript is disabled in you browser! Enable it in order for Quiz Deluxe to function correcly."
 COM_JQ_RESULT_SHOULD_BE_REVIEWED="Admin should check your test. You will get results as soon as admin grades your work."
@@ -253,6 +253,8 @@ COM_JOOMLAQUIZ_QUESTION_IS_CONFIGURED="Question is misconfigured. Please check t
 COM_QUIZ_AUP_USER_COMMENT="User finished \"%s\" quiz"
 COM_QUIZ_TIME_OF="of"
 
+COM_JOOMLAQUIZ_EXPERT_DESC="Quiz Deluxe component for Joomla! package has been installed. Including component, modules and plugins."
+
 _UE_MYQUIZZES_TEST_CATEGORY="Test category"
 _UE_MYQUIZZES_TEST_SCORE="Test score"
 _UE_MYQUIZZES_PERCENTITLE="Percentitle"
@@ -269,4 +271,3 @@ _UE_MYQUIZZES_RANKED="Ranked %s-th among %s provider(s) who have taken this test
 _UE_MYQUIZZES_ALLOWED_TIME="Allowed time for this test is %s minutes"
 _UE_MYQUIZZES_NO_QUIZZES="No quizzes finished."
 _UE_JOOMLAQUIZNOTINSTALLED="JoomlaQuiz Deluxe is not installed."
-COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
