--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -195,6 +195,7 @@ COM_JOOMLAQUIZ_ENTER_A_NAME="Enter the main category name or select one from the
 COM_JOOMLAQUIZ_MENUNAME="MenuName"
 COM_JOOMLAQUIZ_MENUITEM="MenuItem"
 COM_JOOMLAQUIZ_LEARNING_PATH="Learning Path"
+COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Category"
 COM_JOOMLAQUIZ_QUIZ_CATEGORY="Quiz Category"
 COM_JOOMLAQUIZ_QUIZ2="Quiz"
 COM_JOOMLAQUIZ_MENU_MANAGER="Menu Manager"
