reports part + lang

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1062,3 +1062,5 @@ COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
 
 COM_QUIZ_ALEARY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
+COM_JOOMLAQUIZ_MULTIPLE_PURPOSE_CHOICE="Choice (4th generation)"
+COM_JOOMLAQUIZ_QUESTION_EXTENDED="Additional settings"
