--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -4,12 +4,12 @@
 ; @license GNU/GPL http://www.gnu.org/copyleft/gpl.html
 
 COM_QUIZ_MES_NOTVAIL="Sorry, this option is not available now."
-COM_QUIZ_HEADER_FIN_RESULTS="Quiz Results"
+COM_QUIZ_HEADER_FIN_RESULTS="Exam Results"
 COM_QUIZ_RES_MES_SCORE="Your score:"
 COM_QUIZ_RES_CAT_SCORE="Score by categories:"
 COM_QUIZ_RES_MES_PAS_SCORE="Passing score:"
 COM_QUIZ_RES_MES_TIME="Elapsed time:"
-COM_QUIZ_HEADER_FIN_MESSAGE="Quiz Message"
+COM_QUIZ_HEADER_FIN_MESSAGE="Exam Message"
 COM_QUIZ_QUIZ_FEEDNACK="Quiz Feedback"
 COM_JQ_PLEASE_SELECT="- Please select -"
 COM_QUIZ_ANSWER="Your answer"
@@ -43,11 +43,11 @@ COM_PACKAGE_RENEW_DESCR="Contact the administrator to renew your subscription."
 COM_JQ_QUIZZES="Quizzes"
 COM_QUIZ_LPATHS="Courses"
 COM_LPATH_QUIZZES_LIST="Back to list of steps"
-COM_QUIZ_START="Start"
-COM_SHOW_RESULTS_TITLE="Your quizzes results"
+COM_SHOW_RESULTS_TITLE="Your exam results"
 COM_NO_RESULTS="There are no results to display."
-COM_SHOW_RESULTS_DESCR="Click the quiz name to view the detailed results for the attempt."
+COM_SHOW_RESULTS_DESCR="Click the exam name to view the detailed results or download your certificate from the Certificate column."
 COM_JQ_QUIZ="Quiz"
+COM_QUIZ_START="Start Exam"
 COM_JQ_DATE_TIME="Date & Time"
 COM_JQ_YOUR_SCORE="Your Score"
 COM_JQ_PASS_SCORE="Passing Score"
@@ -57,7 +57,7 @@ COM_JQ_SPEND_TIME="Time Spent"
 COM_JQ_RESULT_PASSED="Passed"
 COM_JQ_RESULT_FAILED="Failed"
 COM_JQ_NA="N/A"
-COM_QUIZ_EMAILTO_PROMPT="Please specify the e-mail to send the quiz results to:"
+COM_QUIZ_EMAILTO_PROMPT="Please specify the e-mail to send the exam results to:"
 COM_QUIZ_MES_EMAIL_OK="E-mail was sent successfully"
 COM_QUIZ_MES_EMAIL_FAIL="Failed to send e-mail"
 COM_QUIZ_LPATH_NOT_AVAILABLE="<font color=red><strong>This quiz or course is not available now. Please try again later.</strong></font>"
