Output of products as grouped list

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -340,6 +340,7 @@ COM_JOOMLAQUIZ_SELECT_VM="Select VM product or type the product name!"
 COM_JOOMLAQUIZ_RELATION="relation"
 COM_JOOMLAQUIZ_PRODUCT_NAME2="Product name:"
 COM_JOOMLAQUIZ_OR_SELECT_VM=" OR select VirtueMart product: "
+COM_JOOMLAQUIZ_OR_SELECT_EXISTING=" OR select existing product: "
 COM_JOOMLAQUIZ_QUIZZES="Quizzes:"
 COM_JOOMLAQUIZ_ACCESS_TO_COURSE="Access to course for"
 COM_JOOMLAQUIZ_X_DAYS="x days"
