--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -263,3 +263,14 @@ _UE_MYQUIZZES_ALLOWED_TIME="Allowed time for this test is %s minutes"
 _UE_MYQUIZZES_NO_QUIZZES="No quizzes finished."
 _UE_JOOMLAQUIZNOTINSTALLED="JoomlaQuiz Deluxe is not installed."
 COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
+
+MOD_JOOMLAQUIZ_MOD_CLASSSFX_LBL="Module Class Suffix"
+MOD_JOOMLAQUIZ_MOD_CLASSSFX_DESC="A suffix to be applied to the css class of the module (table.moduletable), this allows individual module styling"
+MOD_JOOMLAQUIZ_MOD_QUIZCOUNT_LBL="Number of quizzes"
+MOD_JOOMLAQUIZ_MOD_QUIZCOUNT_DESC="Number of quizzess to be shown"
+MOD_JOOMLAQUIZ_MOD_USERDISPLAY_LBL="Display user"
+MOD_JOOMLAQUIZ_MOD_USERDISPLAY_DESC="You can choose to show real name or user name"
+MOD_JOOMLAQUIZ_MOD_USERPROFILE_LBL="Show links to user profile"
+MOD_JOOMLAQUIZ_MOD_USERPROFILE_DESC="Show links to user Community Builder profile"
+MOD_JOOMLAQUIZ_MOD_QUIZID_LBL="Quiz ID"
+MOD_JOOMLAQUIZ_MOD_QUIZID_DESC="Set Quiz ID to display (to specify more than one quiz, seperate with a comma , )."
