Change one_time field for quiz. Add default value as inherit. Simple version

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -231,6 +231,7 @@ COM_JOOMLAQUIZ_CERTIFICATE="Certificate:"
 COM_JOOMLAQUIZ_AUTOSTART_QUIZ="Autostart quiz:"
 COM_JOOMLAQUIZ_NO_DEFAULT="No (default)"
 COM_JOOMLAQUIZ_YES="Yes"
+COM_JOOMLAQUIZ_INHERIT="Inherit"
 COM_JOOMLAQUIZ_ALLOW_USER_TO="Allow users to continue unfinished quiz:"
 COM_JOOMLAQUIZ_QUESTIONS_LAYOUT="Questions layout:"
 COM_JOOMLAQUIZ_ONE_QUESTION_PER_PAGE="One question per page (default)"
