added Course Code & Date/Time to pdf reports

--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -159,6 +159,8 @@ COM_STATISTICS_CORRECT="Correct"
 COM_STATISTICS_INCORRECT="Incorrect"
 COM_QUIZ_PDF_QTITLE="Quiz Title:"
 COM_QUIZ_PDF_UNAME="User Login:"
+COM_QUIZ_PDF_DATE_TIME="Date & Time Completed:"
+COM_QUIZ_PDF_COURSE_CODE="Course Code:"
 COM_QUIZ_PDF_NAME="User Name:"
 COM_QUIZ_PDF_UEMAIL="User E-mail:"
 COM_QUIZ_PDF_USCORE="User Score:"
