fix: typo => JQD-1364

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -266,7 +266,7 @@ COM_JOOMLAQUIZ_IF_A_USER_BEGAN="If an authorized user doesn`t finish the started
 COM_JOOMLAQUIZ_CHOOSE_THE_APPROPRIATE="From the drop-down list, select the appropriate option for e-mailing quiz results, or leave it disabled"
 COM_JOOMLAQUIZ_SPECIFY_THE_TIME="Specify the time the user has to pass this quiz (in minutes)"
 COM_JOOMLAQUIZ_SPECIFY_THE_QUESTION_TIME="Specify the time the user has to pass this quiz (in seconds)"
-COM_JOOMLAQUIZ_ENTER_THE_NUMBER="Specify how many times the use can the quiz"
+COM_JOOMLAQUIZ_ENTER_THE_NUMBER="Specify how many times a user can take a quiz"
 COM_JOOMLAQUIZ_DEFINE_THE_PERIOD="Define the period (in minutes), in which the user can make the specified number of attempts to take the quiz"
 COM_JOOMLAQUIZ_TICK_THE_CHECKBOX="Select the check box to reset the specified time period every day at midnight"
 COM_JOOMLAQUIZ_SHORT_DESCRIPTION_OF="Short description of the quiz will be displayed for this quiz on FE in the Quiz Category, Learning path and Package Views"
