--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -224,9 +224,9 @@ COM_JOOMLAQUIZ_DEFINE_USERNAME_PLEASE="Define User Name, please!"
 COM_JOOMLAQUIZ_DEFINE_USERSURNAME_PLEASE="Define User Surname, please!"
 COM_JOOMLAQUIZ_DEFINE_EMAIL="Define email, please!"
 COM_JOOMLAQUIZ_DEFINE_VALID_EMAIL="Input correct email please!"
-COM_JOOMLAQUIZ_INPUT_USER_NAME="Input user name: "
-COM_JOOMLAQUIZ_INPUT_USER_SURNAME="Input user surname: "
-COM_JOOMLAQUIZ_INPUT_USER_EMAIL="Input user email: "
+COM_JOOMLAQUIZ_INPUT_USER_NAME="Input your name: "
+COM_JOOMLAQUIZ_INPUT_USER_SURNAME="Input your surname: "
+COM_JOOMLAQUIZ_INPUT_USER_EMAIL="Input your email: "
 COM_JQ_CERTIFICATE="Certificate"
 COM_JOOMLAQUIZ_DOWNLOAD="Download"
 COM_JOOMLAQUIZ_FE_NO_RIGHTS_VIEW_QUIZ="You are not allowed to access the quiz."
