display assesment texts on FE

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -63,7 +63,7 @@ COM_JOOMLAQUIZ_SUBMENU_CATEGORY="- Quizzes Categories"
 COM_JOOMLAQUIZ_SUBMENU_QUESTION="Questions"
 COM_JOOMLAQUIZ_SUBMENU_CATEGORY_QUESTION="- Question Categories"
 
-## Assesment
+## Assesment menu item params
 COM_JOOMLAQUIZ_ASSESMENT_TEXT_FORMFIELD_TITLE_LABEL="Assesment accompanying texts"
 COM_JOOMLAQUIZ_ASSESMENT_TEXT_DESC_BEFORE="Will be shown before the form"
 COM_JOOMLAQUIZ_ASSESMENT_TEXT_DESC_AFTER="Will be shown after the form"
