fixed language constant for quiz option published in quiz edit form

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -38,6 +38,7 @@ QUESTION_TITLE_LABEL_DESC="Question heading."
 QUESTION_CATID_LABEL="Question category:"
 QUESTION_CATID_LABEL_DESC="Question is assigned to category."
 QUESTION_PUBLISHED_LABEL="Published:"
+QUIZ_PUBLISHED_LABEL_DESC="Quiz state."
 QUESTION_PUBLISHED_LABEL_DESC="Question state."
 QUESTION_QUIZ_LABEL="Quiz:"
 QUESTION_QUIZ_LABEL_DESC="Question relates to quiz."
