Added descriptions for  "Show Question X of Y message:" and "Show Point value X message:"

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -280,6 +280,8 @@ COM_JOOMLAQUIZ_AN_ALLOWANCE_TO="Select the check box to display the link for rep
 COM_JOOMLAQUIZ_ALLOW_USER_TO_EMAIL="E-mail results:"
 COM_JOOMLAQUIZ_CHOOSE_THE_APPROPRIATE="From the drop-down list, select the appropriate option for e-mailing quiz results, or leave it disabled"
 COM_JOOMLAQUIZ_SEND_EMAIL_WHEN="When user finishes quiz, send e-mail to:"
+COM_JOOMLAQUIZ_SHOW_QUESTION_X_OF_Y_MESSAGE="Enable this option to display a progress bar with current question number out of total number of questions"
+COM_JOOMLAQUIZ_SHOW_POINT_VALUE_X_MESSAGE="Enable this option to show question points for correct answer on a progress bar"
 COM_JOOMLAQUIZ_LIKE_TO_RECEIVE="Select the check box to allow sending the quiz results to the specified email(s), and then in the field type the comma-separated e-mails"
 COM_JOOMLAQUIZ_SEPARATED_WITH_COMMA="Separate the e-mails by commas"
 COM_JOOMLAQUIZ_ENABLE_SLIDE_PANEL="Enable results panel:"
