--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1060,7 +1060,7 @@ COM_JOOMLAQUIZ_INSERT_QUIZ_BTN_INSERT="Insert"
 COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
 
 
-COM_QUIZ_ALEARY_PASSED="You have already passed this quiz."
+COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
 
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
