hide BreezingForms in articles

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -206,6 +206,7 @@ COM_JOOMLAQUIZ_NEW_QUIZ_CATEGORY="New Quiz Category"
 COM_JOOMLAQUIZ_QUIZZES_LIST="List of Quizzes"
 COM_JOOMLAQUIZ_FILTER="Filter:"
 COM_JOOMLAQUIZ_TYPE="Type"
+COM_JOOMLAQUIZ_LPATCH_BREEZINGFORMS_ID="ID Related BreezingForms"
 COM_JOOMLAQUIZ_ACTIVE="Active"
 COM_JOOMLAQUIZ_CATEGORY="Category"
 COM_JOOMLAQUIZ_AUTHOR="Author"
