--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -184,6 +184,8 @@ COM_JOOMLAQUIZ_QUESTION_CATEGORIES="Question Categories List"
 COM_JOOMLAQUIZ_SHARP="#"
 COM_JOOMLAQUIZ_NAME="Name"
 COM_JOOMLAQUIZ_DESCRIPTION="Description:"
+COM_JOOMLAQUIZ_DESCRIPTION_LABEL="Description:"
+COM_JOOMLAQUIZ_DESCRIPTION_DESC="Description"
 COM_JOOMLAQUIZ_DESCRIPTION_TABLE="Description"
 COM_JOOMLAQUIZ_MAIN_CATEGORY="Main Category"
 COM_JOOMLAQUIZ_CATEGORY_MUST="Category must have a name"
@@ -223,12 +225,24 @@ COM_JOOMLAQUIZ_EDIT_QUIZ="Edit Quiz"
 COM_JOOMLAQUIZ_NEW_QUIZ="New Quiz"
 COM_JOOMLAQUIZ_QUIZ_DETAILS="Quiz Details"
 COM_JOOMLAQUIZ_TITLE="Title:"
+COM_JOOMLAQUIZ_TITLE_LABEL="Title:"
+COM_JOOMLAQUIZ_TITLE_DESC="Title"
 COM_JOOMLAQUIZ_AUTHOR2="Author:"
+COM_JOOMLAQUIZ_AUTHOR2_LABEL="Author:"
+COM_JOOMLAQUIZ_AUTHOR2_DESC="Author"
 COM_JOOMLAQUIZ_SHOW_AUTHOR="Show author:"
+COM_JOOMLAQUIZ_SHOW_AUTHOR_LABEL="Show author:"
+COM_JOOMLAQUIZ_SHOW_AUTHOR_DESC="Show author"
 COM_JOOMLAQUIZ_CATEGORY2="Category:"
 COM_JOOMLAQUIZ_QUIZ_TYPE="Quiz type:"
+COM_JOOMLAQUIZ_QUIZ_TYPE_LABEL="Quiz type:"
+COM_JOOMLAQUIZ_QUIZ_TYPE_DESC="Quiz type"
 COM_JOOMLAQUIZ_TEMPLATE="Template:"
+COM_JOOMLAQUIZ_TEMPLATE_LABEL="Template:"
+COM_JOOMLAQUIZ_TEMPLATE_DESC="Template"
 COM_JOOMLAQUIZ_CERTIFICATE="Certificate:"
+COM_JOOMLAQUIZ_CERTIFICATE_LABEL="Certificate:"
+COM_JOOMLAQUIZ_CERTIFICATE_DESC="Certificate"
 COM_JOOMLAQUIZ_AUTOSTART_QUIZ="Autostart quiz:"
 COM_JOOMLAQUIZ_NO_DEFAULT="No (default)"
 COM_JOOMLAQUIZ_YES="Yes"
@@ -243,13 +257,19 @@ COM_JOOMLAQUIZ_SPECIFY_THE_TIME="Specify the time the user has to pass this quiz
 COM_JOOMLAQUIZ_TIME_LIMIT2="Time limit (min):"
 COM_JOOMLAQUIZ_TIME_LIMIT3="Time limit (sec):"
 COM_JOOMLAQUIZ_TIMER_STYLE="Timer style:"
+COM_JOOMLAQUIZ_TIMER_STYLE_LABEL="Timer style:"
+COM_JOOMLAQUIZ_TIMER_STYLE_DESC="Timer style"
 COM_JOOMLAQUIZ_STANDART="Standard"
 COM_JOOMLAQUIZ_REMAINING_TIME="Remaining time"
 COM_JOOMLAQUIZ_STANDART_WITH_LIMIT="Standard with limit"
 COM_JOOMLAQUIZ_NUMBER_OF_TIMES="Number of attempts:"
 COM_JOOMLAQUIZ_THE_PERIOD="Period (min):"
 COM_JOOMLAQUIZ_RESET_TIME_LIMIT="Reset time when the next day begins:"
+COM_JOOMLAQUIZ_RESET_TIME_LIMIT_LABEL="Reset time when the next day begins:"
+COM_JOOMLAQUIZ_RESET_TIME_LIMIT_DESC="Reset time when the next day begins"
 COM_JOOMLAQUIZ_PASSING_SCORE2="Passing score (%):"
+COM_JOOMLAQUIZ_PASSING_SCORE2_LABEL="Passing score (%):"
+COM_JOOMLAQUIZ_PASSING_SCORE2_DESC="Passing score (%)"
 COM_JOOMLAQUIZ_QUIZ_DESCRIPTIONS="Quiz Descriptions"
 COM_JOOMLAQUIZ_SHORT_DESCRIPTION="Short Description:"
 COM_JOOMLAQUIZ_IT_IS_SHOWN=""
@@ -287,36 +307,64 @@ COM_JOOMLAQUIZ_ENABLE_SLIDE_PANEL="Enable results panel:"
 COM_JOOMLAQUIZ_WILL_BE_ON_THE="Select the check box to display the results panel to users when they take the quiz. Any time during the quiz the user can click this link and view all the quiz questions and the result for the ones already answered"
 COM_JOOMLAQUIZ_RESULTS_BY_CATEGORIES="Show results by categories:"
 COM_JOOMLAQUIZ_BE_INTEGRATED="Select the check box to group the results by question categories and show points received for every category"
-COM_JOOMLAQUIZ_SHOW_QUESTION_X="Show 'Question X of Y' message:"
-COM_JOOMLAQUIZ_SHOW_POINT_VALUE="Show 'Point value X' message:"
+COM_JOOMLAQUIZ_SHOW_QUESTION_X_LABEL="Show 'Question X of Y' message:"
+COM_JOOMLAQUIZ_SHOW_QUESTION_X_DESC="Show 'Question X of Y' message"
+COM_JOOMLAQUIZ_SHOW_POINT_VALUE_LABEL="Show 'Point value X' message:"
+COM_JOOMLAQUIZ_SHOW_POINT_VALUE_DESC="Show 'Point value X' message"
 COM_JOOMLAQUIZ_SHOW_TIMER="Show timer:"
+COM_JOOMLAQUIZ_SHOW_TIMER_LABEL="Show timer:"
+COM_JOOMLAQUIZ_SHOW_TIMER_DESC="Show timer"
 COM_JOOMLAQUIZ_REDIRECT_AFTER="Redirect after quiz submission:"
+COM_JOOMLAQUIZ_REDIRECT_AFTER_LABEL="Redirect after quiz submission:"
+COM_JOOMLAQUIZ_REDIRECT_AFTER_DESC="Redirect after quiz submission"
 COM_JOOMLAQUIZ_REDIRECT_URL="Redirect to this URL: "
+COM_JOOMLAQUIZ_REDIRECT_URL_LABEL="Redirect to this URL: "
+COM_JOOMLAQUIZ_REDIRECT_URL_DESC="Redirect to this URL "
 COM_JOOMLAQUIZ_OR_USE="OR redirect depending on the results:"
+COM_JOOMLAQUIZ_OR_USE_LABEL="OR redirect depending on the results:"
+COM_JOOMLAQUIZ_OR_USE_DESC="OR redirect depending on the results"
 COM_JOOMLAQUIZ_NO="No"
 COM_JOOMLAQUIZ_YOU_CAN_USE="To use javascript in redirect URL, write `javascript:` at the beginning of that URL."
 COM_JOOMLAQUIZ_DELAY_BEFORE="Delay before redirection: "
+COM_JOOMLAQUIZ_DELAY_BEFORE_LABEL="Delay before redirection: "
+COM_JOOMLAQUIZ_DELAY_BEFORE_DESC="Delay before redirection "
 COM_JOOMLAQUIZ_SECONDS=" seconds"
 COM_JOOMLAQUIZ_QUIZ_GRADING="Quiz grading:"
+COM_JOOMLAQUIZ_QUIZ_GRADING_LABEL="Quiz grading:"
+COM_JOOMLAQUIZ_QUIZ_GRADING_DESC="Quiz grading"
 COM_JOOMLAQUIZ_QUESTION_FEEDBACK="Question Feedback options"
 COM_JOOMLAQUIZ_ENABLE_FEEDBACK="Enable Question feedback:"
 COM_JOOMLAQUIZ_CERTAIN_OR_EVERY="'Yes' to display feedback for question in this quiz. These messages will be shown for all the questions in the quiz, unless you disable them for some questions or provide different feedbacks in the settings of those questions"
 COM_JOOMLAQUIZ_WHEN_ANSWER_CORRECT="If the answer is correct, display:"
+COM_JOOMLAQUIZ_WHEN_ANSWER_CORRECT_LABEL="If the answer is correct, display:"
+COM_JOOMLAQUIZ_WHEN_ANSWER_CORRECT_DESC="If the answer is correct, display"
 COM_JOOMLAQUIZ_WHEN_ANSWER_INCORRECT="If the answer is incorrect, display:"
+COM_JOOMLAQUIZ_WHEN_ANSWER_INCORRECT_LABEL="If the answer is incorrect, display:"
+COM_JOOMLAQUIZ_WHEN_ANSWER_INCORRECT_DESC="If the answer is incorrect, display"
 COM_JOOMLAQUIZ_QUIZ_FEEDBACK_OPT="Quiz Feedback options"
 COM_JOOMLAQUIZ_SHOW_FINAL_STAT="Show detailed result on the final page:"
+COM_JOOMLAQUIZ_SHOW_FINAL_STAT_LABEL="Show detailed result on the final page:"
+COM_JOOMLAQUIZ_SHOW_FINAL_STAT_DESC="Show detailed result on the final page"
 COM_JOOMLAQUIZ_FEEDBACK_OPT="Feedbacks options:"
 COM_JOOMLAQUIZ_CHOOSE_HERE="`By score received` option will show different feedbacks depending on the user score you specify. `By passed/not passed` option will show different feedback messages when the user passes and fails."
 COM_JOOMLAQUIZ_IF_RECEIVED="If received score from "
 COM_JOOMLAQUIZ_TO="to "
 COM_JOOMLAQUIZ_IF_USER_PASSES="If user passes, display:"
+COM_JOOMLAQUIZ_IF_USER_PASSES_LABEL="If user passes, display:"
+COM_JOOMLAQUIZ_IF_USER_PASSES_DESC="If user passes, display"
 COM_JOOMLAQUIZ_IF_USER_FAILS="If user fails, display:"
+COM_JOOMLAQUIZ_IF_USER_FAILS_LABEL="If user fails, display:"
+COM_JOOMLAQUIZ_IF_USER_FAILS_DESC="If user fails, display"
 COM_JOOMLAQUIZ_POOL_OPTIONS="Question Pool options:"
+COM_JOOMLAQUIZ_POOL_OPTIONS_LABEL="Question Pool options:"
+COM_JOOMLAQUIZ_POOL_OPTIONS_DESC="Question Pool options"
 COM_JOOMLAQUIZ_DONT_USE="Do not use"
 COM_JOOMLAQUIZ_NUMBER_OF_QUESTIONS="Number of questions(for random questions):"
 COM_JOOMLAQUIZ_RANDOM_QUESTIONS="Random questions"
 COM_JOOMLAQUIZ_TAKEN_FROM_THE="Select this option to take random questions from the Question Pool. Then specify the number of questions to be taken. Note: if the quiz itself has 5 questions and 25 questions are taken from the Question Pool, the quiz will have 30 questions in total"
 COM_JOOMLAQUIZ_BY_CATEGORIES="By categories:"
+COM_JOOMLAQUIZ_BY_CATEGORIES_LABEL="By categories:"
+COM_JOOMLAQUIZ_BY_CATEGORIES_DESC="By categories"
 COM_JOOMLAQUIZ_LIKE_THE_QUESTIONS="Select this option to take from the Question Pool only questions from particular categories. Then specify the number of questions to be taken from each category"
 COM_JOOMLAQUIZ_METADATA_INF="Metadata"
 COM_JOOMLAQUIZ_PAGE_META_DESCR="Select the check box to replace the quiz page meta-description with the following meta-description"
@@ -487,6 +535,8 @@ COM_JOOMLAQUIZ_DISTRACTOR="Distractor"
 COM_JOOMLAQUIZ_ADDNEW_DISTRACTOR="Add new distractor"
 COM_JOOMLAQUIZ_ENABLE_QUESTION_FEEDBACK="Enable Question feedback:"
 COM_JOOMLAQUIZ_ENABLE_FEEDBACK_IN_PDF="Enable feedback in PDF:"
+COM_JOOMLAQUIZ_ENABLE_FEEDBACK_IN_PDF_LABEL="Enable feedback in PDF:"
+COM_JOOMLAQUIZ_ENABLE_FEEDBACK_IN_PDF_DESC="Enable feedback in PDF"
 COM_JOOMLAQUIZ_IMMEDIATE_FEEDBACK="Immediate feedback:"
 COM_JOOMLAQUIZ_WHEN_THE_ANSWER="When the answer is correct, display:"
 COM_JOOMLAQUIZ_WHEN_THE_ANSWER_DISPLAY="When the answer is incorrect, display:"
@@ -726,7 +776,11 @@ COM_JOOMLAQUIZ_WRONG_ID="Wrong order ID"
 COM_JOOMLAQUIZ_SELECT_QUIZZES_OR_LEARNING="Select quizzes or learning paths to reactivate"
 COM_JOOMLAQUIZ_WRONG_ORDER="Wrong order\'s user"
 COM_JOOMLAQUIZ_ENABLE_SKIP_QUESTION="Enable skip questions:"
+COM_JOOMLAQUIZ_ENABLE_SKIP_QUESTION_LABEL="Enable skip questions:"
+COM_JOOMLAQUIZ_ENABLE_SKIP_QUESTION_DESC="Enable skip questions"
 COM_JOOMLAQUIZ_SHOW_HIDE_RESULT="Show results summary:"
+COM_JOOMLAQUIZ_SHOW_HIDE_RESULT_LABEL="Show results summary:"
+COM_JOOMLAQUIZ_SHOW_HIDE_RESULT_DESC="Show results summary"
 
 COM_JOOMLAQUIZ_LPATH_PERIOD_FROM="from %s"
 COM_JOOMLAQUIZ_LPATH_PERIOD_FORMAT="m/d/Y"
@@ -739,6 +793,8 @@ COM_JOOMLAQUIZ_QUIZ_ATTEMPTS="%s attempt(s)."
 COM_JOOMLAQUIZ_INVALID_PAYMENT="Invalid payment, unable to ReActivate."
 COM_JOOMLAQUIZ_ACCOUNT_WAS_REACTIVATED="Account was reactivated"
 COM_JOOMLAQUIZ_SHOW_QUESTION_FEEDBACK="Show feedbacks for questions on results page:"
+COM_JOOMLAQUIZ_SHOW_QUESTION_FEEDBACK_LABEL="Show feedbacks for questions on results page:"
+COM_JOOMLAQUIZ_SHOW_QUESTION_FEEDBACK_DESC="Show feedbacks for questions on results page"
 
 COM_JOOMLAQUIZ_SELECT_CATEGORY="- Select Category -"
 COM_JOOMLAQUIZ_NEW_ITEMS_DEFAULT="New Items default to the first place. Ordering can be changed after this Item is saved."
@@ -981,7 +1037,11 @@ COM_JOOMLAQUIZ_YOU_CAN_DEFINE="<strong>You can define the fields for the users t
 COM_JOOMLAQUIZ_HIDE_FEEDBACK="Hide feedback if the user fails the quiz:"
 COM_JOOMLAQUIZ_HIDE_FEEDBACK_DESC="This option will be available if there are several attempts set"
 COM_JOOMLAQUIZ_SHOW_SOCIAL_BUTTONS="Show social share buttons:"
+COM_JOOMLAQUIZ_SHOW_SOCIAL_BUTTONS_LABEL="Show social share buttons:"
+COM_JOOMLAQUIZ_SHOW_SOCIAL_BUTTONS_DESC="Show social share buttons"
 COM_JOOMLAQUIZ_ADD_IMAGE="Add image for sharing:"
+COM_JOOMLAQUIZ_ADD_IMAGE_LABEL="Add image for sharing:"
+COM_JOOMLAQUIZ_ADD_IMAGE_DESC="Add image for sharing"
 COM_JOOMLAQUIZ_QUEST_PREVIEW="Preview"
 COM_JOOMLAQUIZ_USEREMAIL="User email"
 
@@ -1062,5 +1122,7 @@ COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
 
 COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
+COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
+COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
